--- a/resources.html
+++ b/resources.html
@@ -23,7 +23,7 @@
 	<body>
 		<div class="fill">
 			<header>
-				<h1>Express Uncontested Divorce Servies</h1>
+				<h1>Express Uncontested Divorce Services</h1>
 				<img src="image/logo.png">
 				<hr>
 			</header>
