--- a/contact-us.html
+++ b/contact-us.html
@@ -48,9 +48,10 @@
 						<li><a href="https://form.jotform.com/230075621099152">Divorce WITHOUT Children</a></li>
 					</ul>
 					<br>
-					<p style="font-size: 8pt; text-align: center;">Online Payment is not required for info submisson, but it does expidite the divorce process.</p>
+					<p style="font-size: 8pt; text-align: center;">Online Payment is not required for info submisson, but it does expedite the divorce process.</p>
 					<h1>Contact Information</h1>
-					<p style="font-size: 16pt;">If you wish to speak with us, or need to request a document other than a divorce,<br> please call us at <a href="tel:15806562669">(580) 656 - 2669</a> or email us <a href="mailto:lesliedawngolden@yahoo.com">here</a></p>
+					<br>
+					<p >If you wish to speak with us, or need to request a document other than a divorce,<br> please call us at <a href="tel:15806562669">(580) 656 - 2669</a> or email us <a href="mailto:lesliedawngolden@yahoo.com">here</a></p>
 					
 				</div>
 				
