--- a/disclaimer.html
+++ b/disclaimer.html
@@ -39,10 +39,10 @@
 			</nav>
 
 			<main>
-				<div class="mbox" style="width: 85%;" >
-						<h2 style="font-size: 4vw;" ><b>Disclaimer:</b></h2>
+				<div class="mbox" style="width: 85%; position:relative; left: 3%;" >
+						<h1 ><b>Disclaimer:</b></h1>
 						<br>
-						<p style="font-size: 2vw; line-height: 1.4; ">This site nor its content shall not be considered as “Legal Advice”. Only a Licensed Attorney can provide Legal Advice. The content of this site is intended for those who wish to represent themselves “Pro Se” as applicable by Oklahoma Law. The information contained herein is provided for educational research as well as for help in the form of a “Legal Service” or “Legal Document Preparation Service”. WE DO NOT GIVE LEGAL ADVICE. We only provide the means to perform a Pro Se divorce in Oklahoma. ExpressDivorce.org will not be held responsible for any third-party content contained herein.</p>
+						<p>This site nor its content shall not be considered as “Legal Advice”. Only a Licensed Attorney can provide Legal Advice. The content of this site is intended for those who wish to represent themselves “Pro Se” as applicable by Oklahoma Law. The information contained herein is provided for educational research as well as for help in the form of a “Legal Service” or “Legal Document Preparation Service”. WE DO NOT GIVE LEGAL ADVICE. We only provide the means to perform a Pro Se divorce in Oklahoma. ExpressDivorce.org will not be held responsible for any third-party content contained herein.</p>
 					
 				</div>
 				<div class="fill"></div>
