--- a/resources.html
+++ b/resources.html
@@ -39,10 +39,10 @@
 			</nav>
 
 			<main>
-				<div class="mbox" style="width: 85%;">
+				<div class="mbox" style="width: 85%; position:relative; left: 3%;">
 					<h1>To compute approximate child support amount, please visit the Oklahoma Human Services Site:</h1>
 					<br> <br>
-					<p><a href="https://oklahoma.gov/okdhs/services/child-support-services/computation.html">Oklahoma Human Services</a></p>
+					<a href="https://oklahoma.gov/okdhs/services/child-support-services/computation.html">Oklahoma Human Services</a>
 				</div>
 				<div class="fill"></div>
 			</main>
