--- a/disclaimer.html
+++ b/disclaimer.html
@@ -24,7 +24,7 @@
 		<div class="fill">
 			<header>
 				<h1>Express Uncontested Divorce Services</h1>
-				<img src="image/logo.png">
+				<!--<img src="image/logo.png">-->
 				<hr>
 			</header>
 
