--- a/divorce.html
+++ b/divorce.html
@@ -30,11 +30,11 @@
 
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="divorce.html">Divorce Info</a></li>
-					<li><a href="disclaimer.html">Disclaimer</a></li>
-					<li><a href="resources.html">Resources</a></li>
-					<li><a href="contact-us.html">Online Submission and Contact Info</a></li>
+					<li><a href="/home">Home</a></li>
+					<li><a href="/divorce">Divorce Info</a></li>
+					<li><a href="/disclaimer">Disclaimer</a></li>
+					<li><a href="/resources">Resources</a></li>
+					<li><a href="/contact-us">Online Submission and Contact Info</a></li>
 				</ul>
 			</nav>
 
